--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
 			margin-bottom: 5px;
 		}
 		/*You can not change anything in the style tag other than to add images for the buttons. */
+    .play {
+      background-image: url(images/play.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding-left: 22px;
+    }
+    .pause {
+      background-image: url(images/pause.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      padding-left: 22px;
+    }
 </style>
 </head>
 <body> 
